# Untitled-Game-Engine

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: gui.frag  gui.vert  hue.frag  hue.vert  sprite.frag  sprite.vert  text.frag  text.vert  world.frag  world.vert
release/: GLEngine
release/assets/shaders/: text.vert  world.frag  world.vert
src/: includes.hpp  test.cpp
src/engine/ecs/: ecs.cpp  ecs.hpp
src/engine/ecs/components/: gui.cpp  gui.hpp  mesh.cpp  mesh.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
src/engine/graphics/: renderer.cpp  renderer.hpp
src/engine/graphics/gui/: controller.cpp  controller.hpp  text.cpp  text.hpp
src/engine/gui/: renderer.cpp  renderer.hpp  text.cpp  text.hpp
src/engine/util/: defines.hpp
src/engine/world/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  world.cpp  world.hpp
src/framework/graphics/: buffers.cpp  buffers.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/framework/util/: debug.cpp  debug.hpp
src/graphics/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/gui/: text.cpp  text.hpp
src/util/: debug.cpp  debug.hpp
